--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 
         <div class="flex-ham">
-          <span></span>
-          <span></span>
-          <span></span>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
         <div class="flex-pos">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
       </div>
 
