--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="content-3">
           <div class="wrap-works">
             <img src="material/polaroid.jpg" alt="">
-            <h1>his works and photos</h1>
+            <h1>His works and photos</h1>
             <div class="button_wrap">
               <a class="photos" href="#">Photos</a>
               <a class="works"href="#">works</a>
