update! add scroll interaction

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
     </header>
     <main>
       <div id="index">
-        <div class="content-1">
+        <div class="content-1 contents">
           <div class="wrap-header">
             <h1>Yuki Itoh<br>Front-Art graph</h1>
             <img src="material/my_logo.svg" alt="">
           </div>
 
         </div>
-        <div class="content-2">
+        <div class="content-2 contents">
           <div class="wrap-self">
             <h1>Who's Yuki Itoh?</h1>
             <img src="material/main.png" alt="">
             <a href="">show me more</a>
           </div>
         </div>
-        <div class="content-3">
+        <div class="content-3 contents">
           <div class="wrap-works">
             <img src="material/polaroid.jpg" alt="">
             <h1>His works and photos</h1>
@@ -62,7 +62,7 @@
 
           </div>
         </div>
-        <div class="content-4">
+        <div class="content-4 contents">
 
         </div>
       </div>
@@ -73,7 +73,8 @@
     </footer>
 
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
   <script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
+
   <script type="text/javascript" src="script/script.js"></script>
 </html>
