--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
           <div class="frame-left"></div>
           <div class="frame-right"></div>
         </div>
-
-
-
         <div class="flex-ham">
-          <div></div>
-          <div></div>
-          <div></div>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
         <div class="flex-pos">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="pos"><span></span></div>
+          <div class="pos"><span></span></div>
+          <div class="pos"><span></span></div>
+          <div class="pos"><span></span></div>
+        </div>
+      </div>
+      <div class="hamburger-menu">
+        <div class="hamburger-menu_nav">
+
         </div>
       </div>
 
@@ -46,8 +48,8 @@
         </div>
         <div class="content-2 contents">
           <div class="wrap-self">
-            <h1>Who's Yuki Itoh?</h1>
-            <img src="material/main.png" alt="">
+            <h1>Who is Yuki Itoh?</h1>
+            <img src="material/my.png" alt="">
             <a href="">show me more</a>
           </div>
         </div>
@@ -62,14 +64,43 @@
 
           </div>
         </div>
-        <div class="content-4 contents">
 
-        </div>
       </div>
 
     </main>
     <footer>
+      <div class="content-4 contents">
+        <div class="wrap-contact">
+          <div class="contact_section">
+            <ul>
+              <li><h2>SNS</h2></li>
+              <li><a class="link_twitter" href="https://twitter.com/front_artgraph" target="_blank">Twitter</a></li>
+              <li><a class="link_instagram" href="https://www.instagram.com/frontartgraph" target="_blank">instagram</a></li>
+              <li><a class="link_wantedly" href="https://www.wantedly.com/users/42158900" target="_blank">wantedly</a></li>
+            </ul>
+          </div>
+          <div class="contact_icon">
+            <div class="contact_icon_twitter contact_icon_imgwrap">
+              <img src="material/twitter.svg" alt="">
+            </div>
+            <div class="contact_icon_instagram contact_icon_imgwrap">
+              <img src="material/instagram.svg" alt="">
 
+            </div>
+            <div class="contact_icon_wantedly contact_icon_imgwrap">
+              <img src="material/wantedly.svg" alt="">
+            </div>
+
+
+          </div>
+          <div class="contact_link">
+            <img src="material/new_window.svg" alt="">
+          </div>
+
+
+        </div>
+
+      </div>
     </footer>
 
   </body>
