--- a/index.html
+++ b/index.html
@@ -12,51 +12,67 @@
   <body>
     <header>
       <div class="headerwrap">
-        <div id="frame">
-          <div class="frame-top"></div>
-          <div class="frame-bottom"></div>
-          <div class="frame-left"></div>
-          <div class="frame-right"></div>
-        </div>
-        <div class="flex-ham">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
         <div class="flex-pos">
           <div class="pos"><span></span></div>
           <div class="pos"><span></span></div>
           <div class="pos"><span></span></div>
           <div class="pos"><span></span></div>
         </div>
+
+        <nav class="header_menu">
+          <ul>
+            <li><a href="#">About</a><span></span></li>
+            <li><a href="#">Works</a><span></span></li>
+            <li><a href="#">Photos</a><span></span></li>
+            <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
+            <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
+            <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+          </ul>
+        </nav>
+
       </div>
-      <div class="hamburger-menu">
+
+      <!-- <div class="hamburger-menu">
         <div class="hamburger-menu_nav">
 
         </div>
-      </div>
+      </div> -->
+
 
     </header>
     <main>
       <div id="index">
         <div class="content-1 contents">
           <div class="wrap-header">
-            <h1>Yuki Itoh<br>Front-Art graph</h1>
+            <div class="circle">
+              <span class="circle_header1 circle_size"></span>
+              <span class="circle_header2 circle_size"></span>
+            </div>
+            <h1>Yuki Itoh<br>Front-Art Graph</h1>
             <img src="material/my_logo.svg" alt="">
           </div>
 
         </div>
         <div class="content-2 contents">
+
           <div class="wrap-self">
-            <h1>Who is Yuki Itoh?</h1>
-            <img src="material/my.png" alt="">
+            <div class="circle">
+              <span class="circle_3"></span>
+              <span class="circle_4"></span>
+            </div>
+            <h1>Who is<br> Yuki Itoh?</h1>
+            <img src="material/main.png" alt="">
             <a href="">show me more</a>
           </div>
         </div>
         <div class="content-3 contents">
           <div class="wrap-works">
+            <div class="circle">
+              <span class="circle_5"></span>
+              <span class="circle_6"></span>
+            </div>
+            <h1>His works <br>and photos</h1>
             <img src="material/polaroid.jpg" alt="">
-            <h1>His works and photos</h1>
             <div class="button_wrap">
               <a class="photos" href="#">Photos</a>
               <a class="works"href="#">works</a>
@@ -72,14 +88,22 @@
       <div class="content-4 contents">
         <div class="wrap-contact">
           <div class="contact_section">
-            <ul>
+            <ul class="contact_sns">
               <li><h2>SNS</h2></li>
               <li><a class="link_twitter" href="https://twitter.com/front_artgraph" target="_blank">Twitter</a></li>
               <li><a class="link_instagram" href="https://www.instagram.com/frontartgraph" target="_blank">instagram</a></li>
               <li><a class="link_wantedly" href="https://www.wantedly.com/users/42158900" target="_blank">wantedly</a></li>
             </ul>
           </div>
-          <div class="contact_icon">
+          <div class="contact_icon ">
+            <ul class="contact_mails">
+              <li><h2>CONTACT</h2></li>
+              <li><p>yuki.itoh@front-artgraph.com</p></li>
+              <li><p>Japan Tokyo</p></li>
+              <li><p>&copy; 2018 frontartgraph</p></li>
+
+            </ul>
+
             <div class="contact_icon_twitter contact_icon_imgwrap">
               <img src="material/twitter.svg" alt="">
             </div>
@@ -91,13 +115,7 @@
               <img src="material/wantedly.svg" alt="">
             </div>
 
-
           </div>
-          <div class="contact_link">
-            <img src="material/new_window.svg" alt="">
-          </div>
-
-
         </div>
 
       </div>
