--- a/photos.html
+++ b/photos.html
@@ -1,75 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="stylesheet" href="stylesheet/reset.css"/>
-    <link rel="stylesheet" href="stylesheet/style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
-    <title>portfolio</title>
-  </head>
-  <body>
-    <header>
-      <div class="headerwrap">
-        <div class="flex-pos">
-          <div class="pos"><span></span></div>
-          <div class="pos"><span></span></div>
-          <div class="pos"><span></span></div>
-          <div class="pos"><span></span></div>
-        </div>
+<html lang="ja">
 
-        <nav class="header_menu">
-          <ul>
-            <li><a href="#">About</a><span></span></li>
-            <li><a href="#">Works</a><span></span></li>
-            <li><a href="#">Photos</a><span></span></li>
-            <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-            <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-            <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
-          </ul>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="stylesheet/reset.css" />
+  <link rel="stylesheet" href="stylesheet/style.css" />
+   <link href="https://fonts.googleapis.com/css?family=Lato:700|Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
+  <title>portfolio</title>
+</head>
 
+<body>
+  <header>
+    <div class="headerwrap">
+      <div class="flex-pos">
+        <!-- js add bar -->
       </div>
 
-      <!-- <div class="hamburger-menu">
+      <nav class="header_menu">
+        <ul>
+          <li><a href="#">About</a><span></span></li>
+          <li><a href="#">Works</a><span></span></li>
+          <li><a href="#">Photos</a><span></span></li>
+          <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
+          <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
+          <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+        </ul>
+      </nav>
+
+    </div>
+
+    <!-- <div class="hamburger-menu">
         <div class="hamburger-menu_nav">
 
         </div>
       </div> -->
 
 
-    </header>
-    <main>
-      <div id="photos">
-        <div class="photostop_wrap">
-          <h1>Polaroid<br>Photographics</h1>
-          <div class="photos_wrap_back">
-            <ul class="photos_wrap_gallery">
-              <!-- <li><img src="material/image_1.JPG" alt=""></li>
-              <li><img src="material/image_2.JPG" alt=""></li>
-              <li><img src="material/image_3.JPG" alt=""></li>
-              <li><img src="material/image_4.JPG" alt=""></li> -->
-            </ul>
+  </header>
+  <main>
+    <div id="index">
 
-            <div class="photos_wrap_morebutton">
-              <p>more</p>
-              <span class="horizontal"></span>
-              <span class="vertical"></span>
-            </div>
+      <div class="content-1 contents">
+      </div>
+
+      <div class="content-2 contents">
+      </div>
+
+    </div>
+
+  </main>
+  <footer>
+    <div class="content-3 contents footer-wrap">
+      <div class="wrap-contact">
+        <div class="contact_section">
+          <ul class="contact_sns">
+            <li>
+              <h2>SNS</h2>
+            </li>
+            <li><a class="link_twitter" href="https://twitter.com/front_artgraph" target="_blank">Twitter</a></li>
+            <li><a class="link_instagram" href="https://www.instagram.com/frontartgraph" target="_blank">instagram</a></li>
+            <li><a class="link_wantedly" href="https://www.wantedly.com/users/42158900" target="_blank">wantedly</a></li>
+          </ul>
+        </div>
+        <div class="contact_icon ">
+          <ul class="contact_mails">
+            <li>
+              <h2>CONTACT</h2>
+            </li>
+            <li>
+              <p>yuki.itoh@front-artgraph.com</p>
+            </li>
+            <li>
+              <p>Japan Tokyo</p>
+            </li>
+            <li>
+              <p>&copy; 2018 frontartgraph</p>
+            </li>
+
+          </ul>
+
+          <div class="contact_icon_twitter contact_icon_imgwrap">
+            <img src="material/twitter.svg" alt="">
           </div>
+          <div class="contact_icon_instagram contact_icon_imgwrap">
+            <img src="material/instagram.svg" alt="">
+
+          </div>
+          <div class="contact_icon_wantedly contact_icon_imgwrap">
+            <img src="material/wantedly.svg" alt="">
+          </div>
+
         </div>
       </div>
 
+    </div>
+  </footer>
 
-    </main>
-    <footer>
+</body>
+<script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
+<script type="text/javascript" src="script/script.js"></script>
 
-    </footer>
-
-  </body>
-  <script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
-
-  <script type="text/javascript" src="script/script.js"></script>
 </html>
