--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
       -->
     </header>
     <main>
+      <div class="circle-responsive"><span class="circle-res res-1"></span><span class="circle-res res-2"></span></div>
       <div id="index">
         <div class="content-1 contents">
           <div class="wrap-header wrapper">
             <div class="circle"><span class="circle_header1 circle_size"></span><span class="circle_header2 circle_size"></span></div>
-            <h1>Yuki Itoh<br>Front-Art Graph</h1><img src="material/my_logo.svg" alt="">
+            <h1>Yuki Itoh<br>Front-Art Graph</h1><img class="logo" src="material/my_logo.svg" alt="">
           </div>
         </div>
         <div class="content-2 contents">
