--- a/photos.html
+++ b/photos.html
@@ -1,107 +1,77 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="stylesheet/reset.css" />
-  <link rel="stylesheet" href="stylesheet/style.css" />
-   <link href="https://fonts.googleapis.com/css?family=Lato:700|Righteous" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
-  <title>portfolio</title>
-</head>
-
-<body>
-  <header>
-    <div class="headerwrap">
-      <div class="flex-pos">
-        <!-- js add bar -->
-      </div>
-
-      <nav class="header_menu">
-        <ul>
-          <li><a href="#">About</a><span></span></li>
-          <li><a href="#">Works</a><span></span></li>
-          <li><a href="#">Photos</a><span></span></li>
-          <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-          <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-          <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
-        </ul>
-      </nav>
-
-    </div>
-
-    <!-- <div class="hamburger-menu">
-        <div class="hamburger-menu_nav">
-
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="stylesheet/reset.css">
+    <link rel="stylesheet" href="stylesheet/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:700|Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
+    <title>portfolio</title>
+  </head>
+  <body>
+    <header>
+      <div class="headerwrap">
+        <div class="flex-pos">
+          <!-- js add bar-->
         </div>
-      </div> -->
-
-
-  </header>
-  <main>
-    <div id="index">
-
-      <div class="content-1 contents">
-      </div>
-
-      <div class="content-2 contents">
-      </div>
-
-    </div>
-
-  </main>
-  <footer>
-    <div class="content-3 contents footer-wrap">
-      <div class="wrap-contact">
-        <div class="contact_section">
-          <ul class="contact_sns">
-            <li>
-              <h2>SNS</h2>
-            </li>
-            <li><a class="link_twitter" href="https://twitter.com/front_artgraph" target="_blank">Twitter</a></li>
-            <li><a class="link_instagram" href="https://www.instagram.com/frontartgraph" target="_blank">instagram</a></li>
-            <li><a class="link_wantedly" href="https://www.wantedly.com/users/42158900" target="_blank">wantedly</a></li>
+        <nav class="header_menu">
+          <ul>
+            <li><a href="#">About</a><span></span></li>
+            <li><a href="#">Works</a><span></span></li>
+            <li><a href="#">Photos</a><span></span></li>
+            <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
+            <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
+            <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
           </ul>
-        </div>
-        <div class="contact_icon ">
-          <ul class="contact_mails">
-            <li>
-              <h2>CONTACT</h2>
-            </li>
-            <li>
-              <p>yuki.itoh@front-artgraph.com</p>
-            </li>
-            <li>
-              <p>Japan Tokyo</p>
-            </li>
-            <li>
-              <p>&copy; 2018 frontartgraph</p>
-            </li>
-
-          </ul>
-
-          <div class="contact_icon_twitter contact_icon_imgwrap">
-            <img src="material/twitter.svg" alt="">
+        </nav>
+      </div>
+      <!--
+      <div class="hamburger-menu">
+      <div class="hamburger-menu_nav">
+      </div>
+      </div>
+      -->
+    </header>
+    <main></main>
+    <footer>
+      <div class="content-4 contents footer-wrap">
+        <div class="wrap-contact">
+          <div class="contact_section">
+            <ul class="contact_sns">
+              <li>
+                <h2>SNS</h2>
+              </li>
+              <li><a class="link_twitter" href="https://twitter.com/front_artgraph" target="_blank">Twitter</a></li>
+              <li><a class="link_instagram" href="https://www.instagram.com/frontartgraph" target="_blank">instagram</a></li>
+              <li><a class="link_wantedly" href="https://www.wantedly.com/users/42158900" target="_blank">wantedly</a></li>
+            </ul>
           </div>
-          <div class="contact_icon_instagram contact_icon_imgwrap">
-            <img src="material/instagram.svg" alt="">
-
+          <div class="contact_icon">
+            <ul class="contact_mails">
+              <li>
+                <h2>CONTACT</h2>
+              </li>
+              <li>
+                <p>yuki.itoh@front-artgraph.com</p>
+              </li>
+              <li>
+                <p>Japan Tokyo</p>
+              </li>
+              <li>
+                <p>© 2018 frontartgraph</p>
+              </li>
+            </ul>
+            <div class="contact_icon_twitter contact_icon_imgwrap"><img src="material/twitter.svg" alt=""></div>
+            <div class="contact_icon_instagram contact_icon_imgwrap"><img src="material/instagram.svg" alt=""></div>
+            <div class="contact_icon_wantedly contact_icon_imgwrap"><img src="material/wantedly.svg" alt=""></div>
           </div>
-          <div class="contact_icon_wantedly contact_icon_imgwrap">
-            <img src="material/wantedly.svg" alt="">
-          </div>
-
         </div>
       </div>
-
-    </div>
-  </footer>
-
-</body>
-<script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
-<script type="text/javascript" src="script/script.js"></script>
-
+    </footer>
+  </body>
+  <script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
+  <script type="text/javascript" src="script/script.js"></script>
 </html>
