--- a/index.html
+++ b/index.html
@@ -16,17 +16,33 @@
         <div class="flex-pos">
           <!-- js add bar-->
         </div>
-        <nav class="header_menu">
-          <ul>
-            <li><a href="#">About</a><span></span></li>
-            <li><a href="#">Works</a><span></span></li>
-            <li><a href="#">Photos</a><span></span></li>
-            <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-            <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-            <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
-          </ul>
+        <nav class="header_menu desktop">
+                <ul>
+                  <li><a href="#">About</a><span></span></li>
+                  <li><a href="#">Works</a><span></span></li>
+                  <li><a href="#">Photos</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                </ul>
+        </nav>
+        <nav class="header_menu phone">
+                <ul>
+                  <li><a href="#">About</a><span></span></li>
+                  <li><a href="#">Works</a><span></span></li>
+                  <li><a href="#">Photos</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                </ul>
         </nav>
       </div>
+      <!--
+      <div class="hamburger-menu">
+      <div class="hamburger-menu_nav">
+      </div>
+      </div>
+      -->
     </header>
     <main>
       <div class="circle-responsive"><span class="circle-res res-1"></span><span class="circle-res res-2"></span></div>
