--- a/photos.html
+++ b/photos.html
@@ -16,15 +16,25 @@
         <div class="flex-pos">
           <!-- js add bar-->
         </div>
-        <nav class="header_menu">
-          <ul>
-            <li><a href="#">About</a><span></span></li>
-            <li><a href="#">Works</a><span></span></li>
-            <li><a href="#">Photos</a><span></span></li>
-            <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-            <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-            <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
-          </ul>
+        <nav class="header_menu desktop">
+                <ul>
+                  <li><a href="#">About</a><span></span></li>
+                  <li><a href="#">Works</a><span></span></li>
+                  <li><a href="#">Photos</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                </ul>
+        </nav>
+        <nav class="header_menu phone">
+                <ul>
+                  <li><a href="#">About</a><span></span></li>
+                  <li><a href="#">Works</a><span></span></li>
+                  <li><a href="#">Photos</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                </ul>
         </nav>
       </div>
       <!--
