--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                   <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
                 </ul>
         </nav>
+        <div class="hamburger"><span></span><span></span><span></span></div>
         <nav class="header_menu phone">
                 <ul>
                   <li><a href="#">About</a><span></span></li>
