--- a/photos.html
+++ b/photos.html
@@ -26,7 +26,7 @@
                   <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
                 </ul>
         </nav>
-        <div class="hamburger"><span></span><span></span><span></span></div>
+        <div class="hamburger"><span class="hamburger-top"></span><span class="hamburger-middle"></span><span class="hamburger-bottom"></span></div>
         <nav class="header_menu phone">
                 <ul>
                   <li><a href="#">About</a><span></span></li>
