--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
         <div class="content-2 contents">
           <div class="wrap-self wrapper">
-            <div class="circle"><span class="circle_3"></span><span class="circle_4"></span></div>
-            <h1>Who is<br> Yuki Itoh?</h1><img class="main-pc" src="material/main.png" alt=""><img class="main-sp" src="material/main_sp.png" alt=""><a class="btn" href=""><span class="bg"></span><span class="text">show me more</span></a>
+            <div class="circle"><span class="circle_3"></span><span class="circle_4"></span></div><img class="main-pc" src="material/main.png" alt=""><img class="main-sp" src="material/main_sp.png" alt="">
+            <h1>Who is<br> Yuki Itoh?</h1><a class="btn" href=""><span class="bg"></span><span class="text">show me more</span></a>
           </div>
         </div>
         <div class="content-3 contents">
