--- a/photos.html
+++ b/photos.html
@@ -54,9 +54,9 @@
               <li>
                 <h2>SNS</h2>
               </li>
-              <li><a class="link_twitter" href="https://twitter.com/front_artgraph" target="_blank"> <span class="link-text"> Twitter</span><img class="link-image" src="material/twitter.svg"></a></li>
-              <li><a class="link_instagram" href="https://www.instagram.com/frontartgraph" target="_blank"><span class="link-text"> Instagram</span><img class="link-image" src="material/instagram.svg"></a></li>
-              <li><a class="link_wantedly" href="https://www.wantedly.com/users/42158900" target="_blank"><span class="link-text"> Wantedly</span><img class="link-image" src="material/wantedly_mark.svg"></a></li>
+              <li><a class="link_twitter" href="https://twitter.com/front_artgraph" target="_blank"> <span class="link-text"> Twitter</span><img class="link-image" src="material/twitter_sp.png"></a></li>
+              <li><a class="link_instagram" href="https://www.instagram.com/frontartgraph" target="_blank"><span class="link-text"> Instagram</span><img class="link-image" src="material/instagram_sp.png"></a></li>
+              <li><a class="link_wantedly" href="https://www.wantedly.com/users/42158900" target="_blank"><span class="link-text"> Wantedly</span><img class="link-image" src="material/wantedly_sp.png"></a></li>
             </ul>
           </div>
           <div class="contact_icon">
