--- a/index.html
+++ b/index.html
@@ -6,35 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet/reset.css">
     <link rel="stylesheet" href="stylesheet/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:700|Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
     <title>portfolio</title>
   </head>
   <body>
     <header>
       <div class="headerwrap">
-        <div class="flex-pos">
-          <!-- js add bar-->
-        </div>
         <nav class="header_menu desktop">
                 <ul>
-                  <li><a href="#">About</a><span></span></li>
-                  <li><a href="#">Works</a><span></span></li>
-                  <li><a href="#">Photos</a><span></span></li>
-                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                  <li><a href="#">ABOUT</a><span></span></li>
+                  <li><a href="#">WORKS</a><span></span></li>
+                  <li><a href="#">PHOTOS</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">TWITTER</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">INSTAGRAM</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">WANTEDLY</a><span></span></li>
                 </ul>
         </nav>
         <div class="hamburger"><span class="hamburger-top"></span><span class="hamburger-middle"></span><span class="hamburger-bottom"></span></div>
         <nav class="header_menu phone">
                 <ul>
-                  <li><a href="#">About</a><span></span></li>
-                  <li><a href="#">Works</a><span></span></li>
-                  <li><a href="#">Photos</a><span></span></li>
-                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                  <li><a href="#">ABOUT</a><span></span></li>
+                  <li><a href="#">WORKS</a><span></span></li>
+                  <li><a href="#">PHOTOS</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">TWITTER</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">INSTAGRAM</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">WANTEDLY</a><span></span></li>
                 </ul>
         </nav>
       </div>
@@ -48,29 +45,40 @@
     <main>
       <div class="circle-responsive"><span class="circle-res res-1"></span><span class="circle-res res-2"></span></div>
       <div id="index">
-        <div class="content-1 contents">
+        <div class="contents">
           <div class="wrap-header wrapper">
-            <div class="circle"><span class="circle_header1 circle_size"></span><span class="circle_header2 circle_size"></span></div>
+            <div class="circle circle-header">
+              <div class="circle-header_bar">
+                <div class="circle-header_bar_wrap"><span class="circle-header_bar_wrap-color"></span></div>
+              </div><span class="circle_header1 circle_size"></span><span class="circle_header2 circle_size"></span>
+            </div>
             <h1>Yuki Itoh<br>Front-Art Graph</h1><img class="logo" src="material/my_logo.svg" alt="">
           </div>
         </div>
-        <div class="content-2 contents">
+        <div class="contents">
           <div class="wrap-self wrapper">
-            <div class="circle"><span class="circle_3"></span><span class="circle_4"></span></div><img class="main-pc" src="material/main.png" alt=""><img class="main-sp" src="material/main_sp.png" alt="">
-            <h1>Who is<br> Yuki Itoh?</h1><a class="btn" href=""><span class="bg"></span><span class="text">show me more</span></a>
+            <div class="wrap-self_text">
+              <div class="circle circle-self">
+                <div class="circle-self_bar"><span class="circle-self_bar-color"></span></div><span class="circle_3"></span><span class="circle_4"></span>
+              </div>
+              <h1>Who is<br> Yuki Itoh?</h1><a class="btn" href=""><span class="bg"></span><span class="text">show me more</span></a>
+            </div>
+            <div class="wrap-self_image"><img class="wrap-self_image-pc" src="material/main.png" alt=""><img class="wrap-self_image-sp" src="material/main_sp.png" alt=""></div>
           </div>
         </div>
-        <div class="content-3 contents">
+        <div class="contents">
           <div class="wrap-works wrapper">
-            <div class="circle"><span class="circle_5"></span><span class="circle_6"></span></div>
-            <h1>His works <br>and photos</h1><img src="material/polaroid.jpg" alt="">
-            <div class="button_wrap"><a class="btn" href=""><span class="bg"></span><span class="text">Photos</span></a><a class="btn" href=""><span class="bg"></span><span class="text">works</span></a></div>
+            <div class="wrap-works_image"><img src="material/polaroid.jpg" alt=""></div>
+            <div class="wrap-works_text">
+              <div class="circle circle-works"><span class="circle_5"></span><span class="circle_6"></span></div>
+              <h1>His works <br>and photos</h1><a class="btn" href=""><span class="bg"></span><span class="text">Photos & works</span></a>
+            </div>
           </div>
         </div>
       </div>
     </main>
     <footer>
-      <div class="content-4 contents footer-wrap">
+      <div class="contents footer-wrap">
         <div class="wrap-contact">
           <div class="contact_section">
             <ul class="contact_sns">
@@ -106,6 +114,6 @@
     </footer>
   </body>
   <script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
+  <script type="text/javascript" src="script/rellax.min.js"></script>
   <script type="text/javascript" src="script/script.js"></script>
 </html>
