--- a/photos.html
+++ b/photos.html
@@ -6,35 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet/reset.css">
     <link rel="stylesheet" href="stylesheet/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:700|Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
     <title>portfolio</title>
   </head>
   <body>
     <header>
       <div class="headerwrap">
-        <div class="flex-pos">
-          <!-- js add bar-->
-        </div>
         <nav class="header_menu desktop">
                 <ul>
-                  <li><a href="#">About</a><span></span></li>
-                  <li><a href="#">Works</a><span></span></li>
-                  <li><a href="#">Photos</a><span></span></li>
-                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                  <li><a href="#">ABOUT</a><span></span></li>
+                  <li><a href="#">WORKS</a><span></span></li>
+                  <li><a href="#">PHOTOS</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">TWITTER</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">INSTAGRAM</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">WANTEDLY</a><span></span></li>
                 </ul>
         </nav>
         <div class="hamburger"><span class="hamburger-top"></span><span class="hamburger-middle"></span><span class="hamburger-bottom"></span></div>
         <nav class="header_menu phone">
                 <ul>
-                  <li><a href="#">About</a><span></span></li>
-                  <li><a href="#">Works</a><span></span></li>
-                  <li><a href="#">Photos</a><span></span></li>
-                  <li class="header_menu_twitter"><a href="#">Twitter</a><span></span></li>
-                  <li class="header_menu_instagram"><a href="#">Instagram</a><span></span></li>
-                  <li class="header_menu_wantedly"><a href="#">Wantedly</a><span></span></li>
+                  <li><a href="#">ABOUT</a><span></span></li>
+                  <li><a href="#">WORKS</a><span></span></li>
+                  <li><a href="#">PHOTOS</a><span></span></li>
+                  <li class="header_menu_twitter"><a href="#">TWITTER</a><span></span></li>
+                  <li class="header_menu_instagram"><a href="#">INSTAGRAM</a><span></span></li>
+                  <li class="header_menu_wantedly"><a href="#">WANTEDLY</a><span></span></li>
                 </ul>
         </nav>
       </div>
@@ -47,7 +44,7 @@
     </header>
     <main></main>
     <footer>
-      <div class="content-4 contents footer-wrap">
+      <div class="contents footer-wrap">
         <div class="wrap-contact">
           <div class="contact_section">
             <ul class="contact_sns">
@@ -83,6 +80,6 @@
     </footer>
   </body>
   <script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
+  <script type="text/javascript" src="script/rellax.min.js"></script>
   <script type="text/javascript" src="script/script.js"></script>
 </html>
