--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div id="index">
         <div class="contents">
           <div class="wrap-header wrapper">
-            <div class="circle circle-header">
+            <div class="circle circle-header circle-index">
               <div class="circle-header_bar">
                 <div class="circle-header_bar_wrap"><span class="circle-header_bar_wrap-color"></span></div>
               </div><span class="circle_header1 circle_size"></span><span class="circle_header2 circle_size"></span>
@@ -71,7 +71,7 @@
             <div class="wrap-works_image"><img src="material/polaroid.jpg" alt=""></div>
             <div class="wrap-works_text">
               <div class="circle circle-works"><span class="circle_5"></span><span class="circle_6"></span></div>
-              <h1>His works <br>and photos</h1><a class="btn" href=""><span class="bg"></span><span class="text">Photos & works</span></a>
+              <h1>His works <br>and photos</h1><a class="btn" href=""><span class="bg"></span><span class="text">Photos & works    </span></a>
             </div>
           </div>
         </div>
