--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet/reset.css">
-    <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="stylesheet/style.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
     <title>portfolio</title>
@@ -15,32 +15,26 @@
       <div class="headerwrap">
         <nav class="header_menu desktop">
                 <ul>
-                  <li><a href="#">ABOUT</a><span></span></li>
-                  <li><a href="#">WORKS</a><span></span></li>
-                  <li><a href="#">PHOTOS</a><span></span></li>
-                  <li class="header_menu_twitter"><a href="#">TWITTER</a><span></span></li>
-                  <li class="header_menu_instagram"><a href="#">INSTAGRAM</a><span></span></li>
-                  <li class="header_menu_wantedly"><a href="#">WANTEDLY</a><span></span></li>
+                  <li><a href="index.html">Top page<span></span></a></li>
+                  <li class="header_menu_twitter"><a href="#">Twitter<span></span></a></li>
+                  <li class="header_menu_instagram"><a href="#">Instagram<span></span></a></li>
+                  <li class="header_menu_wantedly"><a href="#">Wantedly<span></span></a></li>
+                  <li><a href="about.html">Show me more<span></span></a></li>
+                  <li><a href="news.html">Photos & works<span></span></a></li>
                 </ul>
         </nav>
         <div class="hamburger"><span class="hamburger-top"></span><span class="hamburger-middle"></span><span class="hamburger-bottom"></span></div>
         <nav class="header_menu phone">
                 <ul>
-                  <li><a href="#">ABOUT</a><span></span></li>
-                  <li><a href="#">WORKS</a><span></span></li>
-                  <li><a href="#">PHOTOS</a><span></span></li>
-                  <li class="header_menu_twitter"><a href="#">TWITTER</a><span></span></li>
-                  <li class="header_menu_instagram"><a href="#">INSTAGRAM</a><span></span></li>
-                  <li class="header_menu_wantedly"><a href="#">WANTEDLY</a><span></span></li>
+                  <li><a href="index.html">Top page<span></span></a></li>
+                  <li class="header_menu_twitter"><a href="#">Twitter<span></span></a></li>
+                  <li class="header_menu_instagram"><a href="#">Instagram<span></span></a></li>
+                  <li class="header_menu_wantedly"><a href="#">Wantedly<span></span></a></li>
+                  <li><a href="about.html">Show me more<span></span></a></li>
+                  <li><a href="news.html">Photos & works<span></span></a></li>
                 </ul>
         </nav>
       </div>
-      <!--
-      <div class="hamburger-menu">
-      <div class="hamburger-menu_nav">
-      </div>
-      </div>
-      -->
     </header>
     <main>
       <div class="circle-responsive"><span class="circle-res res-1"></span><span class="circle-res res-2"></span></div>
@@ -61,7 +55,7 @@
               <div class="circle circle-self">
                 <div class="circle-self_bar"><span class="circle-self_bar-color"></span></div><span class="circle_3"></span><span class="circle_4"></span>
               </div>
-              <h1>Who is<br> Yuki Itoh?</h1><a class="btn" href=""><span class="bg"></span><span class="text">show me more</span></a>
+              <h1>Who is<br> Yuki Itoh?</h1><a class="btn" href="about.html"><span class="bg"></span><span class="text">show me more</span></a>
             </div>
             <div class="wrap-self_image"><img class="wrap-self_image-pc" src="material/main.png" alt=""><img class="wrap-self_image-sp" src="material/main_sp.png" alt=""></div>
           </div>
